# neurometabench

./: .gitignore  README  pyproject.toml
analysis/social/ALL-Merged/: boilerplate.txt  z_corr-FDR_method-indep_diag-FocusCounter_tab-counts_tail-positive.tsv  z_corr-FDR_method-indep_tab-clust.tsv
analysis/social/Affiliation-Merged/: boilerplate.txt  z_corr-FDR_method-indep_diag-FocusCounter_tab-counts_tail-positive.tsv  z_corr-FDR_method-indep_tab-clust.tsv
analysis/social/Others-Merged/: boilerplate.txt  z_corr-FDR_method-indep_diag-FocusCounter_tab-counts_tail-positive.tsv  z_corr-FDR_method-indep_tab-clust.tsv
analysis/social/Self-Merged/: boilerplate.txt  (+2 more)
data/: .~lock.included_studies.tsv#  MetaanalysisPMIDs - RewardProcessingPMIDs.csv  all_studies.csv  all_studies.tsv  all_studies_annotated.csv  all_studies_annotated_wt.csv  included_studies.csv  included_studies.tsv  included_studies_wt.csv  meta_datasets.csv  meta_datasets.tsv  meta_datasets_manual_input.tsv
data/meta-studies/: all_studies
raw/: Meta-Analysis II - including_exclusion.xlsx  Meta-Analysis_normalized.xlsx
raw/meta-datasets/: Coordinate-Based Meta-Analytic Datasets.xlsx
scratch/fuzzy_match_results/: matched_studies_Affiliation.csv  matched_studies_Others.csv  matched_studies_Self.csv  matched_studies_SocComm.csv
scripts/: convert_dementia_xlsx_to_nimads.py  convert_sleuth_to_nimads.py  fetch_titles.py  fuzzy_match_analysis_to_pmid.py  map_pmcid_to_nimads.py  merge_annotations.py  merge_project_nimads_to_annotation.py  normalize_spreadsheet.py  pre_process.py  run_meta_analyses.py
(+243 files in other folders)
