[project]
authors = [{name = "Alejandro de la Vega", email = "aleph4@gmail.com"}]
name = "neurometabench"
version = "0.1.0"
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
pandas = ">=2.3.3,<3"
requests = ">=2.32.5,<3"
openpyxl = ">=3.1.5,<4"
ipython = ">=9.6.0,<10"
pip = "*"

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]
install-nimare = "pip install -e ../NiMARE"
