[project]
authors = [{name = "Alejandro de la Vega", email = "aleph4@gmail.com"}]
name = "neurometabench"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.3.3,<3"
requests = ">=2.32.5,<3"
openpyxl = ">=3.1.5,<4"
ipython = ">=9.6.0,<10"
pip = "*"
rapidfuzz = ">=3.0.0,<4"
scikit-learn = ">=1.4,<2"
pydantic = ">=2,<3"
nilearn = ">=0.10.1,<0.13"

[tool.pixi.pypi-dependencies]
autonima = { path = "../autonima", editable = true }
pubget = { git = "https://github.com/neuroquery/pubget" }

[tool.pixi.activation.env]
PYTHONNOUSERSITE = "1"

[tool.pixi.tasks]
install-autonima = "pip install -e ../autonima --no-deps"
install-nimare = "pip install -e ../NiMARE"
